2005-12-08  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #4361: Define XF86CONFIGFILE properly so config file generation
	works.

2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/dmx/doc/Makefile.am:
	* hw/xfree86/doc/sgml/Makefile.am:
	Fix sgml docs build.

2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Add configure option to set the top level font dir.

2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	Add configure options to allow hard-coded paths to be changed.

2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Change to use the app-defaults default dir configured in libXt.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Xprint/doc/Makefile.am:
	* doc/Makefile.am:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/getconfig/Makefile.am:
	* hw/xfree86/utils/gtf/Makefile.am:
	* hw/xfree86/utils/kbd_mode/Makefile.am:
	* hw/xfree86/utils/pcitweak/Makefile.am:
	* hw/xfree86/utils/scanpci/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	* hw/xnest/Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-06  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #5230: Fix whitespace bugs.

2005-12-06  Alan Coopersmith  <alan.coopersmith@sun.com>

	* os/Makefile.am: 
	Bugzilla #5219 <https://bugs.freedesktop.org/show_bug.cgi?id=5219>
	Make sure all optional sources are included in EXTRA_DIST,
	even if they aren't used on the platform the distballs are made on.

2005-12-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* xorg/Makefile.am:
	* xorg/configure.ac:
	* xorg/hw/xfree86/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am: 